# TheoryLang

./: .gitignore  .gitmodules
TaskInfisk/: CMakeLists.txt  README.MD  inter.cpp  test_coverage.bat  tests.bat
TaskInfix/: inter.hpp  tests.cpp
